--- a/templates/nginx-conf.yaml
+++ b/templates/nginx-conf.yaml
@@ -11,48 +11,9 @@ data:
 
       include /etc/nginx/conf.d/healthcheck.inc;
 
-      {{ if .Values.nginx.enablePipelineDashboards }}
-      {{ if index .Values "pipelines-jobs" "dataservices" "enabled" }}
-      location /pipeline/dataservices1/ {
-        proxy_pass http://pipeline-dataservices1:5000/;
-      }
-      location /pipeline/dataservices2/ {
-        proxy_pass http://pipeline-dataservices2:5000/;
-      }
-      {{ end }}
-
-      {{ if index .Values "pipelines-jobs" "committeesProtocols" "enabled" }}
-      location /pipeline/committee-protocols/ {
-        proxy_pass http://pipeline-committee-protocols:5000/;
-      }
-      {{ end }}
-
-      {{ if index .Values "pipelines-jobs" "committeesBuildMeetings" "enabled" }}
-      location /pipeline/committee-build-meetings/ {
-        proxy_pass http://pipeline-committee-build-meetings:5000/;
-      }
-      {{ end }}
-
-      {{ if index .Values "pipelines-jobs" "committeesPackage" "enabled" }}
-      location /pipeline/committee-package/ {
-        proxy_pass http://pipeline-committee-package:5000/;
-      }
-      {{ end }}
-
-      {{ if index .Values "pipelines-jobs" "people" "enabled" }}
-      location /pipeline/people/ {
-        proxy_pass http://pipeline-people:5000/;
-      }
-      {{ end }}
-
-      location = /pipeline {
-        return 200 '<a href="http://{{ .Values.nginx.mainDomain }}/pipeline/dataservices1/">dataservices1</a>
-                    <a href="http://{{ .Values.nginx.mainDomain }}/pipeline/dataservices2/">dataservices2</a>
-                    <a href="http://{{ .Values.nginx.mainDomain }}/pipeline/committee-protocols/">committee-protocols</a>
-                    <a href="http://{{ .Values.nginx.mainDomain }}/pipeline/committee-build-meetings/">committee-build-meetings</a>
-                    <a href="http://{{ .Values.nginx.mainDomain }}/pipeline/committee-package/">committee-package</a>
-                    <a href="http://{{ .Values.nginx.mainDomain }}/pipeline/people/">people</a>';
-        add_header Content-Type text/html;
+      {{ if .Values.nginx.enablePipelineDashboard }}
+      location /pipelines/ {
+        proxy_pass http://pipelines-server:5000/;
       }
       {{ end }}
 
