--- a/charts-external/pipelines-jobs/templates/pipelines.yaml
+++ b/charts-external/pipelines-jobs/templates/pipelines.yaml
@@ -48,18 +48,15 @@ spec:
         - bash
         - "-c"
         - |
-          while ! python -c 'import redis;redis.StrictRedis(host="pipelines-server", db=5).ping()'; do sleep 1; done
           echo "
-            cd /pipelines
-            ./pipelines_script.sh dataservices
-            ./pipelines_script.sh all
-            export CHECK_REMOTE_STORAGE=https://storage.googleapis.com/knesset-data-pipelines/data/committees/download_document_committee_session/
-            ./pipelines_script.sh protocols
+              cd /pipelines
+              ${CRON_SCRIPT:-./pipelines_script.sh}
           " > /cronscript
           bash /cronscript
           mkdir -p /crontabs &&\
-          echo '# min hour day month weekday command' > /crontabs/root &&\
-          echo '* 2 * * * bash /cronscript' >> /crontabs/root &&\
+          echo "# min hour day month weekday command" > /crontabs/root &&\
+          if [ "${CRON_TIME}" != "" ]; then echo "${CRON_TIME} bash /cronscript" >> /crontabs/root; fi &&\
+          cat /crontabs/root &&\
           crond -fc /crontabs -d 8
         env:
         - name: DATASERVICE_HTTP_PROXY
@@ -78,6 +75,16 @@ spec:
           value: pipelines-server
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /secret_service_key
+        - name: CRON_TIME
+          value: {{ .Values.pipelinesCronTime | default "" | quote }}
+        - name: CRON_SCRIPT
+          value: |
+            ./pipelines_script.sh dataservices
+            ./pipelines_script.sh all
+            export CHECK_REMOTE_STORAGE=https://storage.googleapis.com/knesset-data-pipelines/data/committees/download_document_committee_session/
+            ./pipelines_script.sh protocols
+        - name: DPP_INFLUXDB_URL
+          value: http://metrics-influxdb:8086
         volumeMounts:
         - name: k8s-ops
           mountPath: /secret_service_key
