--- a/charts-external/pipelines-jobs/templates/people.yaml
+++ b/charts-external/pipelines-jobs/templates/people.yaml
@@ -33,20 +33,20 @@ spec:
           cat /crontabs/root &&\
           crond -fc /crontabs -d 8
         env:
+        - name: DPP_CONCURRENCY
+          value: "2"
         - name: DPP_DB_ENGINE
           valueFrom: {"secretKeyRef":{"name":"publicdb", "key":"DPP_DB_ENGINE"}}
         - name: DUMP_TO_STORAGE
           value: "1"
         - name: DUMP_TO_SQL
           value: "1"
-        - name: DPP_CONCURRENCY
-          value: "3"
-        - name: DPP_REDIS_HOST
-          value: pipelines-server
-        - name: CRON_TIME
-          value: {{ .Values.peopleCronTime | default "" | quote }}
-        - name: DPP_INFLUXDB_URL
-          value: http://metrics-influxdb:8086
+#        - name: DPP_REDIS_HOST
+#          value: pipelines-server
+#        - name: CRON_TIME
+#          value: {{ .Values.peopleCronTime | default "" | quote }}
+#        - name: DPP_INFLUXDB_URL
+#          value: http://metrics-influxdb:8086
         volumeMounts:
         - name: k8s-ops
           mountPath: /secret_service_key
