--- a/charts-external/pipelines-jobs/templates/pipelines.yaml
+++ b/charts-external/pipelines-jobs/templates/pipelines.yaml
@@ -70,21 +70,21 @@ spec:
         - name: RUN_PIPELINE_CMD
           value: dpp run
         - name: DPP_CONCURRENCY
-          value: "5"
-        - name: DPP_REDIS_HOST
-          value: pipelines-server
+          value: "4"
+#        - name: DPP_REDIS_HOST
+#          value: pipelines-server
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /secret_service_key
-        - name: CRON_TIME
-          value: {{ .Values.pipelinesCronTime | default "" | quote }}
+#        - name: CRON_TIME
+#          value: {{ .Values.pipelinesCronTime | default "" | quote }}
         - name: CRON_SCRIPT
           value: |
             ./pipelines_script.sh dataservices
             ./pipelines_script.sh all
             export CHECK_REMOTE_STORAGE=https://storage.googleapis.com/knesset-data-pipelines/data/committees/download_document_committee_session/
             ./pipelines_script.sh protocols
-        - name: DPP_INFLUXDB_URL
-          value: http://metrics-influxdb:8086
+#        - name: DPP_INFLUXDB_URL
+#          value: http://metrics-influxdb:8086
         volumeMounts:
         - name: k8s-ops
           mountPath: /secret_service_key
