--- a/charts-external/pipelines/templates/deployment.yaml
+++ b/charts-external/pipelines/templates/deployment.yaml
@@ -1,4 +1,4 @@
-{{ if and .Values.enabled .Values.pipelinesEnabled }}
+{{ if .Values.enabled }}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -12,6 +12,8 @@ spec:
     metadata:
       labels:
         app: pipelines
+      annotations:
+        checksum/nginx-config: {{ include (print $.Template.BasePath "/nginx-configmap.yaml") . | sha256sum }}
     spec:
       terminationGracePeriodSeconds: 0
       containers:
@@ -45,11 +47,8 @@ spec:
         image: {{ .Values.image | quote }}
         resources: {"requests": {"cpu": "600m", "memory": "2Gi"}, "limits": {"cpu": "1200m", "memory": "3Gi"}}
         command:
-        - sh
-        - "-c"
-        - while true; do sleep 86400; done
-#        - "/dpp/docker/run.sh"
-#        - server
+        - "/dpp/docker/run.sh"
+        - server
         ports:
         - containerPort: 5000
         env:
@@ -77,7 +76,22 @@ spec:
         - mountPath: /var/redis
           name: data
           subPath: redis
+      - name: nginx
+        image: nginx:alpine
+        ports:
+        - containerPort: 8000
+        resources: {"requests": {"cpu": "50m", "memory": "150Mi"}, "limits": {"memory": "300Mi"}}
+        volumeMounts:
+        - name: nginx-conf
+          mountPath: /etc/nginx/conf.d
+          readOnly: true
+        - mountPath: /pipelines/data
+          name: data
+          subPath: data
       volumes:
+      - name: nginx-conf
+        configMap:
+          name: pipelines-nginx
       - name: k8s-ops
         secret:
           secretName: ops
