--- a/templates/nginx-conf.yaml
+++ b/templates/nginx-conf.yaml
@@ -23,20 +23,25 @@ data:
         include /etc/nginx/conf.d/restricted.inc;
       }
       {{ end }}
-    }
 
-    {{ if .Values.traefik.enableCommitteesNext }}
-    server {
-      listen 81;
-      server_name _;
-
-      error_page 404 =200 /index.html;
-
-      location / {
-        proxy_pass https://storage.googleapis.com/knesset-data-pipelines/data/dist/;
+      {{ if .Values.pipelines.enabled }}
+      location /pipelines/data/ {
+        proxy_pass http://pipelines:8000/pipelines/data/;
       }
+      location /pipelines/ {
+        proxy_pass http://pipelines:5000/;
+      }
+      {{ end }}
+
+      {{ if .Values.people.enabled }}
+      location /people/data/ {
+        proxy_pass http://people:8000/pipelines/data/;
+      }
+      location /people/pipelines/ {
+        proxy_pass http://people:5000/;
+      }
+      {{ end }}
     }
-    {{ end }}
 
   healthcheck.inc: |
     location = / {
