--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 - docker
 script:
 - |
-  if false && [ "${DEPLOY_ENVIRONMENT}" != "" ] && [ "${TRAVIS_PULL_REQUEST}" == "false" ] &&\
+  if [ "${DEPLOY_ENVIRONMENT}" != "" ] && [ "${TRAVIS_PULL_REQUEST}" == "false" ] &&\
      ( \
       ([ "${TRAVIS_BRANCH}" == "${DEPLOY_BRANCH}" ] && ! echo "${TRAVIS_COMMIT_MESSAGE}" | grep -- --no-deploy) ||\
       ([ "${DEPLOY_TAGS}" == "true" ] && [ "${TRAVIS_TAG}" != "" ]) \
@@ -21,8 +21,8 @@ script:
       chmod +x run_docker_ops.sh
       if ./run_docker_ops.sh "${K8S_ENVIRONMENT_NAME}" "
         cd /ops &&\
-        ./helm_upgrade.sh &&\
-        ./helm_upgrade_external_chart.sh pipelines-jobs
+        ./helm_upgrade_all.sh --dry-run --install &&\
+        ./helm_upgrade_all.sh --install
       " "orihoch/sk8s-ops" "${OPS_REPO_SLUG}" "${OPS_REPO_BRANCH}"; then
         true
       else
