--- a/charts-external/committees/templates/nginx-configmap.yaml
+++ b/charts-external/committees/templates/nginx-configmap.yaml
@@ -6,6 +6,20 @@ metadata:
 data:
   default.conf: |
     server {
+      listen 8080;
+      location /pipelines/data/ {
+        index null;
+        root /;
+        autoindex on;
+      }
+      location /pipelines/dist/ {
+        index null;
+        root /;
+        autoindex on;
+      }
+    }
+
+    server {
       listen 8000;
       error_page 404 =200 @homepageredirect;
       rewrite ^/member/([0-9]*)/ /members/$1.html last;
