--- a/environments/production/.env
+++ b/environments/production/.env
@@ -1,7 +1,7 @@
-CLOUDSDK_CORE_PROJECT=hasadna-oknesset
-CLOUDSDK_CONTAINER_CLUSTER=knessetdata
-CLOUDSDK_COMPUTE_ZONE=us-central1-a
-K8S_NAMESPACE=production
-K8S_HELM_RELEASE_NAME=knessetdata
+CLOUDSDK_CORE_PROJECT=hasadna-general
+CLOUDSDK_CONTAINER_CLUSTER=hasadna-cluster
+CLOUDSDK_COMPUTE_ZONE=europe-west1-b
+K8S_NAMESPACE=oknesset
+K8S_HELM_RELEASE_NAME=oknesset
 K8S_ENVIRONMENT_NAME=production
-K8S_ENVIRONMENT_CONTEXT=gke_hasadna-oknesset_us-central1-a_knessetdata
+K8S_ENVIRONMENT_CONTEXT=gke_hasadna-general_europe-west1-b_hasadna-cluster
