--- a/charts-external/publicdb/templates/deployment.yaml
+++ b/charts-external/publicdb/templates/deployment.yaml
@@ -1,34 +1,4 @@
 {{ if .Values.enabled }}
-apiVersion: v1
-kind: Service
-metadata:
-  name: publicdb
-spec:
-  ports:
-  - name: '5432'
-    port: 5432
-  selector:
-    app: publicdb
-  {{ if .Values.enableLoadBalancer }}
-  type: LoadBalancer
-  {{ if .Values.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.loadBalancerIP | quote }}
-  {{ end }}
-  {{ end }}
----
-{{ if .Values.adminerEnabled }}
-apiVersion: v1
-kind: Service
-metadata:
-  name: publicdb-adminer
-spec:
-  ports:
-  - name: '8080'
-    port: 8080
-  selector:
-    app: publicdb
----
-{{ end }}
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
@@ -41,17 +11,22 @@ spec:
       labels:
         app: publicdb
     spec:
+      {{ if .Values.nodeSelector }}
+      nodeSelector:
+        {{ .Values.nodeSelector }}
+      {{ end }}
       terminationGracePeriodSeconds: 5
       containers:
       - name: publicdb
         image: "postgres"
         ports:
         - containerPort: 5432
+          {{ if .Values.enableHostPort }}hostPort: 5432{{ end }}
         resources: {{ .Values.resources }}
         env:
-        {{ if .Values.global.publicdbSecret }}
+        {{ if .Values.secretName }}
         - name: POSTGRES_PASSWORD
-          valueFrom: {"secretKeyRef":{"name":"{{ .Values.global.publicdbSecret }}", "key":"POSTGRES_PASSWORD"}}
+          valueFrom: {"secretKeyRef":{"name":"{{ .Values.secretName }}", "key":"POSTGRES_PASSWORD"}}
         {{ else }}
         - name: POSTGRES_PASSWORD
           value: "123456"
