--- a/environments/production/values.yaml
+++ b/environments/production/values.yaml
@@ -14,6 +14,7 @@ pipelines:
   persistentDiskName: oknesset-pipelines
   image: orihoch/knesset-data-pipelines
   committeesDomain: oknesset.org
+  enableTika: true
 
 publicdb:
   enabled: true
